--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.prod.js",
     "start-dev": "webpack serve --config webpack.dev.js",
-    "start": "npx http-server ."
+    "start": "npx http-server ./dist"
   },
   "author": "asyrianirya",
   "license": "MIT",
   "devDependencies": {
     "@babel/preset-env": "^7.24.8",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "favicons": "^7.2.0",
@@ -20,19 +21,21 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "http-server": "^14.1.1",
+    "mini-css-extract-plugin": "^2.9.0",
     "prettier": "3.3.3",
+    "sass": "^1.77.8",
+    "sass-loader": "^16.0.0",
     "style-loader": "^4.0.0",
-    "url-loader": "^4.1.1",
+    "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
     "webpack-merge": "^6.0.1"
   },
   "dependencies": {
+    "@fontsource-variable/edu-tas-beginner": "^5.0.12",
+    "@fontsource-variable/merienda": "^5.0.13",
     "@fontsource/bebas-neue": "^5.0.20",
-    "animejs": "^3.2.2",
-    "eslint": "^9.8.0",
-    "sweetalert2": "^11.6.13"
-  },
-  "packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
+    "sweetalert2": "^11.4.8"
+  }
 }
